--- a/catalog/view/theme/default/stylesheet/orginal.css
+++ b/catalog/view/theme/default/stylesheet/orginal.css
@@ -36,6 +36,7 @@ body{
 }
 a {
 	text-decoration:none;
+	outline: none;
 	color:#757575
 }
 a:hover{
@@ -142,7 +143,6 @@ a:hover{
 .item-avatar:hover .item-avatar-img.off {
 	opacity: 1;
 }
-
 #body-content .box1{
 	width:275px;
 	height:186px;
@@ -176,27 +176,6 @@ a:hover{
 	overflow-x:hidden;
 	overflow-y:auto;	
 }
-
-.sub-banner{
-	width:200px;
-	height:380px;
-	background:#adadad;
-	float:left;
-	margin-right:10px;
-}
-.sub-banner img{
-	width:200px;
-	height:auto;
-	float:left;
-}
-.sub-banner ul{float:left; width:200px;}
-.sub-banner li{color:white;}
-.sub-banner a{color:white;}
-.sub-content{
-	width:630px;
-	height:auto;
-	float:right;
-}
 .pagebar{
 	width:630px;
 	height:auto;
@@ -212,6 +191,99 @@ a:hover{
 	float:left;
 	clear:both;
 	margin:5px 0;
+}
+
+/*
+	FAQ page
+*/
+#faq-page {
+    padding: 20px;
+}
+#faq-page h2 {
+	font-size: 20px;
+	color: #000;
+	padding-bottom: 5px;
+	border-bottom: 1px solid #f0f0f0;
+}
+#faq-page .contentbox {
+
+}
+#topic-container {
+    position: fixed;
+    width: 200px;
+    background: #ddd;
+    padding-bottom: 30px;
+    top: 65px;
+}
+#topic-container .img img {
+    width: 200px;
+}
+#topic-container .list-topic {
+    padding-left: 30px;
+    list-style: square;
+}
+#topic-container .list-topic li {
+    margin: 5px 0px;
+}
+#topic-container .list-topic li a.active {
+	color: #000;
+	font-size: 17px;
+}
+#topic-container .list-topic li a {
+    font-size: 15px;
+    font-weight: bold;
+}
+#content-container {
+    position: absolute;
+    top: 42px;
+    left: 240px;
+    right: 0px;
+    bottom: 0px;
+    padding: 20px;
+    overflow: hidden;
+}
+#content-container .topic-item {
+    margin-bottom: 20px;
+    display: none;
+}
+#content-container .topic-item.active {
+	display: block;
+	position: relative;
+	height: 100%;
+}
+.topic-item .topic-item-name {
+    font-size: 20px;
+    color: #000;
+    margin: 0px 0px 10px 0px;
+}
+.topic-item .problem-list {    
+    overflow: auto;
+    position: absolute;
+    top: 30px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+}
+.topic-item .problem-list ol {
+	padding-left: 20px;
+}
+.problem-list .problem-item {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-left: 1px solid #fff;
+}
+.problem-list .problem-item:hover,
+.problem-list .problem-item.active {
+	background-color: #f0f0f0;
+	border-left: 1px solid #b4b4b4;
+}
+.problem-item .problem-item-question {
+    font-weight: bold;
+    cursor: pointer;
+}
+.problem-item .problem-item-answer {
+	display: none;	
+    margin-top: 10px;
 }
 
 /* Intro Page */
@@ -325,7 +397,9 @@ a:hover{
 }
 #site-map .contentbox > ul > li > ul > li > ul {
 	padding-left: 20px;
+	list-style: square;
 }
 #site-map .contentbox > ul > li > ul > li > ul > li > ul{
 	padding-left: 20px;
+	list-style: square;
 }
