--- a/catalog/view/theme/default/stylesheet/orginal.css
+++ b/catalog/view/theme/default/stylesheet/orginal.css
@@ -193,20 +193,24 @@ a:hover{
 	margin:5px 0;
 }
 
-/*
-	FAQ page
-*/
-#faq-page {
-    padding: 20px;
+.popup-container {	
+	padding: 20px;
 }
-#faq-page h2 {
+.popup-container h2 {
 	font-size: 20px;
 	color: #000;
 	padding-bottom: 5px;
+	margin-bottom: 10px;
+	text-transform: uppercase;
 	border-bottom: 1px solid #f0f0f0;
 }
-#faq-page .contentbox {
+.popup-container .contentbox {
+}
 
+/*
+	FAQ page
+*/
+#faq-page {    
 }
 #topic-container {
     position: fixed;
@@ -327,21 +331,32 @@ a:hover{
 }
 
 /* Contact Page */
-.contact-map{
-	width:520px;
-	height:400px;
-	border-left:1px solid #999;
-	text-align: center;
+#contact-address {
+	min-height: 500px;	
+}
+.contact-map {
+	text-align: right;
+	float: right;
+	width: 590px;
+	height: 450px;
+	overflow: hidden;
+}
+.contact-map img {
+    width: 100%;
+}
+.contact-info{
+	width: 270px;
+	float: left;
+}
+.contact-info .logo img {
+}
+.contact-info .address {
+	line-height: 20px;
 }
 .contact-form input{
 	width:95%;
 	border:0;
 	border-bottom:1px solid #757575;
-}
-.contact-info{
-	width:330px;
-	height:auto;
-	float:left;
 }
 .contact-online{
 	width:100%;
