--- a/catalog/view/theme/default/stylesheet/orginal.css
+++ b/catalog/view/theme/default/stylesheet/orginal.css
@@ -75,8 +75,7 @@ a:hover{
 }
 #menu{
 	width:100%;
-	border-bottom:1px solid #C70115;
-	border-top:1px solid #C70115;
+	border-bottom: 1px solid #021D63;
 	padding: 1px 0px;
 	margin: 150px 0px 20px 0px;
 }
@@ -97,28 +96,27 @@ a:hover{
 }
 #menu > ul > li > a:hover,
 #menu > ul > li.active > a {
-	color: #fff;
-	background: #C70115;
+	color: #000;
+	background: transparent;
 }
 #menu > ul > li > ul {
     position: absolute;	
-    border: 1px solid #f0f0f0;
     bottom: 28px;
 }
 #menu > ul > li > ul > li {
-    display: block;  
-    border-top: 1px solid #f0f0f0;      
+    display: block;       
 }
 #menu > ul > li > ul > li > a {
     display: block;	
     white-space: nowrap;
-    padding: 8px 20px;
+    padding: 8px 10px;
     font-size: 13px;
     min-width: 130px;
 }
 #menu > ul > li > ul > li > a:hover{
-	background: #f0f0f0;
-	color: #000;
+	color: #fff;
+	background-color: #021D63;
+	font-weight: bold;
 }
 
 /* Body CSS */
@@ -379,6 +377,9 @@ a:hover{
 }
 #menulang .list-flag li:hover span {
 	color: #000;	
+}
+#menulang .has-site-map{
+	text-align: center;
 }
 #menulang .has-site-map li {
 	padding: 3px 10px;
