--- a/catalog/view/theme/default/stylesheet/orginal.css
+++ b/catalog/view/theme/default/stylesheet/orginal.css
@@ -1,6 +1,17 @@
 @charset "utf-8";
 /* CSS Document */
 
+@font-face
+{
+	font-family: ArnoProBold;
+	src: url('../type/ArnoPro-Bold.otf'); 
+}
+@font-face
+{
+	font-family: ArnoProRegular;
+	src: url('../type/ArnoPro-Regular.otf'); 
+}
+
 *{
 	padding: 0px;
 	margin: 0px;
@@ -30,7 +41,7 @@ h2{
 body{
 	font-size:14px;
 	font-weight: 400;
-	font-family: Time New Roman, Times, serif;
+	font-family: ArnoProRegular,Time New Roman, serif;
 	background-color:#fff;
 	color:#757575;
 }
@@ -88,20 +99,23 @@ a:hover{
 }
 #menu > ul > li a {
 	text-transform: uppercase;
-	font-weight: bold;
+	font-weight: normal;
 	display: block;
-	padding: 5px 12px;
+	padding: 5px 8px 2px 8px;
 	text-decoration: none;
-	color: #0e0e0e;
+	color: #4D4D4D;
 }
 #menu > ul > li > a:hover,
 #menu > ul > li.active > a {
 	color: #000;
-	background: transparent;
+}
+#menu > ul > li > a {
+	font-weight: bold;
+	font-size: 15px;
 }
 #menu > ul > li > ul {
     position: absolute;	
-    bottom: 28px;
+    bottom: 26px;
 }
 #menu > ul > li > ul > li {
     display: block;       
@@ -110,12 +124,11 @@ a:hover{
     display: block;	
     white-space: nowrap;
     padding: 8px 10px;
-    font-size: 13px;
+    font-size: 14px;
     min-width: 130px;
 }
 #menu > ul > li > ul > li > a:hover{
-	color: #fff;
-	background-color: #021D63;
+	color: #4D4D4D;
 	font-weight: bold;
 }
 
@@ -214,6 +227,7 @@ a:hover{
 	background: transparent url(../image/icon-redbox.gif) 0 50% no-repeat;
 	margin-bottom: 15px;
 	border-bottom: 1px solid #f0f0f0;
+	text-transform: uppercase;
 }
 .contentbox{
 	overflow-x:hidden;
@@ -440,7 +454,7 @@ a:hover{
 	margin-top:30px;
 	padding-bottom: 15px;
 	float:left;
-	font-size:12px;
+	font-size: 13px;
 }
 
 #site-map {
