--- a/catalog/view/theme/default/stylesheet/orginal.css
+++ b/catalog/view/theme/default/stylesheet/orginal.css
@@ -82,7 +82,7 @@ a:hover{
 #banner{
 	clear:both;
 	text-align:center;
-	padding: 0px 0px;
+	padding: 20px 0px 0px 0px;
 }
 #menu{
 	width:100%;
@@ -116,6 +116,7 @@ a:hover{
 #menu > ul > li > ul {
     position: absolute;	
     bottom: 26px;
+    left: -2px;
 }
 #menu > ul > li > ul > li {
     display: block;       
@@ -129,7 +130,7 @@ a:hover{
     font-weight: bold;
 }
 #menu > ul > li > ul > li > a:hover{
-	color: #4D4D4D;
+	color: #000;
 	font-weight: bold;
 }
 
@@ -144,7 +145,7 @@ a:hover{
 	margin: 5px 5px;
 	float: left;
 	position: relative;
-	box-shadow: 2px 2px 1px 0px #ccc;
+	box-shadow: 2px 2px 2px 1px #b4b4b4;
 }
 .box-item .category-title {
     position: absolute;
@@ -409,7 +410,7 @@ a:hover{
 }
 #menulang .has-site-map li:hover span {
 	border-bottom: none;
-	color: #021D63;
+	color: #011446;
 }
 
 /* Contact Page */
@@ -419,21 +420,51 @@ a:hover{
 .contact-map {
 	text-align: right;
 	float: right;
-	width: 590px;
-	height: 450px;
+	width: 790px;
+	height: 485px;
 	overflow: hidden;
 }
+.contact-map .map-item {
+	float: right;
+	display: block;
+	width: 390px;
+	height: 230px;
+	overflow: hidden;
+	margin: 0px 0px 15px 0px;
+}
 .contact-map img {
-    width: 100%;
+    width: 370px;
 }
 .contact-info{
-	width: 270px;
+	width: 350px;
 	float: left;
+	color: #535353;
 }
-.contact-info .logo img {
+.contact-info .company-name {
+    white-space: normal;
+	
+    font-size: 18px;
+    color: #5E5E5E;
 }
-.contact-info .address {
-	line-height: 20px;
+.contact-info .contact-item {
+    margin: 20px 0px;
+	
+    font-size: 16px;
+}
+.contact-item > h3 {
+    padding-bottom: 0px;
+	
+    border-bottom: 2px solid #000;
+    margin-bottom: 10px;
+}
+.contact-item .group-contact-info {
+    margin-bottom: 10px;	
+}
+.contact-item .group-contact-info:last-child {
+	margin-bottom: 0px;
+}
+.contact-item .fb-fanpage {
+	
 }
 .contact-form input{
 	width:95%;
@@ -454,12 +485,13 @@ a:hover{
 /* Footer CSS*/
 #footer{
 	width:1000px;
+	position: fixed;
+	bottom: 20px;
 	height:auto;
 	text-align:center;
 	margin-top:30px;
-	padding-bottom: 15px;
-	float:left;
 	font-size: 14px;
+	background-color: #fff;
 }
 
 #site-map {
@@ -754,6 +786,9 @@ Jcarousel
 }
 .news-detail-content {
 	margin-bottom: 15px;
+}
+.news-detail-content img {
+	cursor: pointer;
 }
 .additional-news-info {
     padding-top: 15px;
