--- a/catalog/view/theme/default/stylesheet/orginal.css
+++ b/catalog/view/theme/default/stylesheet/orginal.css
@@ -237,7 +237,7 @@ a:hover{
 	margin-bottom: 20px;
 }
 #body-content .pagelocation.margin-box5 {
-	margin-bottom: 40px;
+	margin-bottom: 38px;
 }
 .contentbox{
 	overflow-x:hidden;
@@ -744,6 +744,31 @@ Jcarousel
 }
 .jcarousel-container:hover .jcarousel-next.jcarousel-next-horizontal {
 	opacity: 0.7;
+}
+
+/*SCROLL*/
+.caroufredsel_wrapper .btn-scroll{
+	height: 25px;
+	width: 25px;
+	display: none;
+	opacity: 0.5;
+	position: absolute;
+	top: 42%;	
+}
+.caroufredsel_wrapper:hover .btn-scroll{
+	display: block;
+}
+.caroufredsel_wrapper .btn-scroll:hover {
+	opacity: 1;
+}
+.caroufredsel_wrapper #next-scroll {
+	background: transparent url(../image/btn-next.png) 0 0 no-repeat;
+	right: 0px;
+}
+.caroufredsel_wrapper #prev-scroll {
+	background: transparent url(../image/btn-pre.png) 0 0 no-repeat;
+	margin-right: 10px;
+	left: 0px;
 }
 
 /*Email subcription*/
