--- a/catalog/view/theme/default/stylesheet/orginal.css
+++ b/catalog/view/theme/default/stylesheet/orginal.css
@@ -234,7 +234,7 @@ a:hover{
 	margin-bottom: 8px;
 }
 #body-content .pagelocation.margin-box3 {
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 }
 #body-content .pagelocation.margin-box5 {
 	margin-bottom: 38px;
@@ -428,20 +428,21 @@ a:hover{
 .contact-map {
 	text-align: right;
 	float: right;
-	width: 790px;
+	width: 600px;
 	height: 485px;
 	overflow: hidden;
 }
 .contact-map .map-item {
 	float: right;
 	display: block;
-	width: 390px;
+	width: 285px;
 	height: 230px;
 	overflow: hidden;
-	margin: 0px 0px 15px 0px;
+	margin: 0px 10px 5px 0px;
 }
 .contact-map img {
-    width: 370px;
+    width: 100%;
+    height: 100%;
 }
 .contact-info{
 	width: 350px;
