--- a/catalog/view/theme/default/stylesheet/orginal.css
+++ b/catalog/view/theme/default/stylesheet/orginal.css
@@ -860,3 +860,16 @@ Jcarousel
     background: #E4E4E4;
     padding: 5px 15px;
 }
+
+.theme-default .nivo-controlNav {
+	position: absolute;
+	bottom: 10px;
+	right: 15px;
+	z-index: 1000;
+}
+#popup-slide-image {
+	padding: 0px;
+}
+#popup-slide-image h2 {
+	padding: 10px 10px 0px 10px;
+}
